[INFER] Fix bogus assert, bug 651827.